# littlewoods-testing

./: .coveragerc  .editorconfig  .env.default  .gitignore  Dockerfile  Procfile  README.md  app.json  circle.yml  docker-compose.yml  env.sample  manage.py  setup.cfg
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
design/: littlewoods-ireland-idv.html
design/css/: lwi-idv.css
docker/web/: Dockerfile
idv/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
idv/collector/: const.py  domain.py  forms.py  models.py  urls.py  util.py  views.py
idv/common/: aws.py  decorators.py  http.py  mail.py  sftp.py  utils.py
idv/giftwrap/: admin.py  apps.py  domain.py  forms.py  ifs.py  mixins.py  models.py  reporting.py  types.py  urls.py  views.py
idv/internal/: mixins.py  urls.py  views.py
idv/mover/: apps.py  commands.py  contextmanagers.py  domain.py  mail.py  models.py  reporting.py  tasks.py
idv/settings/: __init__.py  base.py  dev.py  django.py  logs.py  prod.py  settings.py  utils.py
idv/sftp/: admin.py  domain.py  models.py
idv/templates/: base.html  base_idvn.html  epack_base.html  gw_base.html  loadraven.html
idv/tracker/: domain.py  est_delivery_date.py  status_descriptions.py  urls.py  views.py
requirements/: base.txt  dev.txt  heroku.txt  production.txt
tests/: .pylintrc  conftest.py  logs.py
tests/test_collector/: test_domain.py  test_forms.py  test_models.py  test_views.py
tests/test_common/: test_aws.py  test_mail.py
tests/test_giftwrap/: conftest.py  test_domain.py  test_forms.py  test_ifs.py  test_models.py  (+2 more)
(+91 files in other folders)
