[metadata]
name = littlewoods-idv
author = Scurri Web Services
author-email = dev@scurri.com
summary = Littlewoods ID&V
description-file = README.md

[files]
packages =
    idv

[isort]
# see: https://github.com/timothycrosley/isort/wiki/isort-Settings
multi_line_output=4
known_first_party=idv,tests
known_third_party=django,pytest,mock,freezegun
default_section=THIRDPARTY
