[metadata]
name = littlewoods-idv
author = Scurri Web Services
author-email = dev@scurri.com
summary = Littlewoods ID&V
description-file = README.md

[files]
packages = idv

[tool:pytest]
testpaths = tests
norecursedirs = .git __pycache__ migrations static staticfiles
addopts = --reuse-db --tb=short

[flake8]
exclude = .git,__pycache,migrations,static
ignore = D1,D200,D202,D204,D205,D400,D401,D412

[isort]
multi_line_output=4
known_first_party=idv,tests
known_third_party=django,pytest,freezegun
default_section=THIRDPARTY
skip = migrations,static
